[package]
name = "cascade-engine"
version.workspace = true
edition.workspace = true

[dependencies]
cascade-config = { path = "../cascade-config" }
cascade-expr = { path = "../expr" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, optional = true }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
rusqlite = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
cascade-p2p = { path = "../p2p", optional = true }
data-encoding.workspace = true
sha2 = { workspace = true }
cascade-exec = { version = "0.1.135", path = "../exec", optional = true }

[features]
# `native` carries the host-only runtime and storage backends — tokio,
# rusqlite, and reqwest none of which compile to wasm32. It is on by default so
# an ordinary `cargo build` is unaffected, and it supplies the native adapters
# in `portable::native` that bind the trait contracts to those crates. A wasm
# build drops it (`--no-default-features --features portable`) and supplies its
# own adapters behind the same contracts.
default = ["native", "p2p", "exec"]
native = ["dep:tokio", "dep:rusqlite", "dep:reqwest"]
# `p2p` pulls in the P2P block-sharing engine (cascade-p2p), the management-plane
# dispatch and signed capability tokens, and the p2p_bridge module. The ring C
# crate inside cascade-p2p does not compile to wasm32, so a WASM build drops this
# feature and loses remote management, token signing, and peer sync.
p2p = ["dep:cascade-p2p", "native"]
# `portable` compiles the runtime/storage/HTTP/filesystem trait contracts in
# `portable`, which the core logic depends on instead of tokio/rusqlite/reqwest
# /std::fs directly. The traits carry no host-only types, so the module builds
# on any target.
portable = []
# `exec` pulls in the cascade-exec capability provider (PTYs via portable-pty,
# headless processes via tokio::process) and wires the exec management verbs into
# the dispatch path. A wasm / no-exec build drops it so portable-pty (which does
# not compile to wasm32) is not pulled in. Requires the p2p feature: the exec
# verbs travel as management frames defined in cascade-p2p.
exec = ["dep:cascade-exec", "p2p", "cascade-p2p/exec"]

# WASM-only deps — used by the portable::wasm (spawn_local, setTimeout) and
# portable::wasm_io (fetch, Blob, Headers) adapters.
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { workspace = true, features = [
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "Window",
    "Blob",
    "BlobPropertyBag",
] }
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
num-traits = { version = "0.2.19", default-features = false }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
wasm-bindgen-test = "0.3"

[lints]
workspace = true
