[package]
name = "cascade-exec"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
portable-pty= "0.8"
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process", "io-util", "sync", "rt", "macros"] }
tracing.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["signal", "process"] }

[lints]
workspace = true
