[package]
name = "cascade-p2p"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true, features = ["net", "rt", "macros", "io-util"] }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
sha2 = "0.11"
rcgen = "0.13"
data-encoding = "2"
rusqlite.workspace = true
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = "0.3.32"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls-pemfile = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"

[lints]
workspace = true
