[package]
name = "cascade-p2p"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true, features = ["net", "rt", "macros", "io-util"] }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
sha2 = "0.10"
hmac.workspace = true
rcgen = "0.14"
data-encoding.workspace = true
rusqlite.workspace = true
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = "0.3.32"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls-pemfile = "2"
if-addrs = { workspace = true }

[features]
## Enable the Linux netns NAT integration tests.
##
## Requires root / CAP_NET_ADMIN, `ip`, and `iptables`. The tests skip
## automatically when not running as root or when `ip`/`iptables` are
## absent, so the feature flag exists purely to keep them out of the
## standard `cargo test` run.
nat-integration = []

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tempfile = "3"
## Pulled in for the nat-integration tests (relay subprocess role).
cascade-relay-server = { path = "../relay-server", default-features = false }

[lints]
workspace = true
