[package]
name = "cascade-p2p"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true, features = ["net", "rt", "macros", "io-util", "sync"] }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
sha2 = "0.11"
hmac.workspace = true
rcgen = "0.14"
data-encoding.workspace = true
rusqlite.workspace = true
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = "0.3.32"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls-pemfile = "2"
if-addrs = { workspace = true }
reqwest = { workspace = true, optional = true }
mainline = { version = "7.0.0", default-features = false, features = ["async", "node"], optional = true }
ed25519-dalek = { workspace = true }
cascade-announce-wire = { version = "0.1.56", path = "../cascade-announce-wire" }
ring = "0.17"
x509-parser = "0.18"
cascade-exec = { version = "0.1.131", path = "../exec", optional = true }

[features]
## Enable the announce-server discovery client ([`discovery::announce::AnnounceDiscovery`]).
##
## Pulls in `reqwest` for the JSON HTTP round-trips. The serialisable wire
## types ([`discovery::announce::WireCandidate`] and friends) are always
## compiled so the relay-server can depend on them without the client weight;
## only the HTTP client is gated behind this feature.
announce = ["dep:reqwest"]

## Enable the Linux netns NAT integration tests.
##
## Requires root / CAP_NET_ADMIN, `ip`, and `iptables`. The tests skip
## automatically when not running as root or when `ip`/`iptables` are
## absent, so the feature flag exists purely to keep them out of the
## standard `cargo test` run.
nat-integration = []

## Enable the Kademlia/Mainline-DHT discovery source
## ([`discovery::dht::MainlineDht`], the live [`discovery::dht::DhtNode`]
## backend).
##
## Pulls in the `mainline` BitTorrent Mainline DHT crate (and its
## `ed25519-dalek` BEP44 signing stack). The [`discovery::dht::DhtDiscovery`]
## resolver, the [`discovery::dht::DhtNode`] contract, and the
## device-id-to-BEP44-seed mapping are always compiled — only the
## network-facing `mainline`-backed node lives behind this feature, mirroring
## how the announce-server HTTP client is gated behind `announce`.
dht = ["dep:mainline"]

## Enable the live exec data-plane stream pump ([`exec_stream`]).
##
## Pulls in `cascade-exec`, whose PTY support reaches `portable-pty` ->
## `ioctl-rs`, which does not compile to iOS. A mobile node has no
## process-exec capability, so this feature is dropped on those targets; the
## pure wire decoders in [`protocol`] (`MSG_EXEC_STREAM` / `_ACK`) stay
## compiled regardless because they carry no `cascade-exec` dependency.
exec = ["dep:cascade-exec"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tempfile = "3"
## Pulled in for the nat-integration tests (relay subprocess role).
cascade-relay-server = { path = "../relay-server", default-features = false }

[lints]
workspace = true
