[package]
name = "cascade-presenter-fileprovider"
version.workspace = true
edition.workspace = true

[dependencies]
cascade-engine = { path = "../engine" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "net"] }
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
data-encoding = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }
tempfile = "3"
proptest = "1"

[lints]
workspace = true
