[package]
name = "cascade-presenter-fuse"
version.workspace = true
edition.workspace = true

[dependencies]
cascade-engine = { path = "../engine" }
async-trait.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
libc = "0.2"
dirs = "6"

[target.'cfg(target_os = "linux")'.dependencies]
fuser = "0.17"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
