[package]
name = "cascade-presenter-nfs"
version.workspace = true
edition.workspace = true

[dependencies]
cascade-engine = { path = "../engine" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
dirs = "6"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
proptest = "1"

[lints]
workspace = true
