[package]
name = "cascade-presenter-projfs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cascade-engine = { path = "../engine" }
async-trait.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "macros"] }
tracing.workspace = true

# The windows crate ships ProjFS bindings under the
# `Win32_Storage_ProjectedFileSystem` feature. Only pull it in on
# Windows targets so the crate compiles cross-platform.
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Storage_ProjectedFileSystem",
] }

[features]
## Enable the Windows-only live ProjFS integration test.
##
## The test drives a real `PrjStartVirtualizing` mount and exercises the
## kernel callback round-trip, so it only runs on Windows with the
## Client-ProjFS optional feature enabled and the PrjFlt minifilter
## loaded. The feature flag keeps it out of the standard `cargo test`
## run; the dedicated `projfs-live` CI job opts in explicitly.
projfs-live = []

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
