[package]
name = "cascade-presenter-webdav"
version.workspace = true
edition.workspace = true

[dependencies]
cascade-engine = { path = "../engine" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
tokio-util = { version = "0.7", features = ["io"] }
chrono.workspace = true
dirs.workspace = true
urlencoding.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
reqwest = { workspace = true }

[lints]
workspace = true
