[package]
name = "cascade-relay-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cascade-relay"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["handshake"] }
futures-util = "0.3"
clap = { workspace = true }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
http = "1"
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"], optional = true }

[features]
default = ["metrics"]
metrics = ["dep:axum"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }

[lints]
workspace = true
