[package]
name = "cascade-relay-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cascade-relay"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["handshake"] }
futures-util = "0.3"
clap = { workspace = true }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
http = "1"
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "json"], optional = true }
cascade-p2p = { path = "../p2p" }
cascade-announce-wire = { version = "0.1.50", path = "../cascade-announce-wire" }

[features]
default = ["metrics"]
metrics = ["dep:axum"]
## Enable the announce/lookup rendezvous directory endpoint
## ([`announce`]). Pulls in axum for the HTTP surface and reuses the
## announce wire types from cascade-p2p. The relay can be built without it
## when only the byte-pipe is wanted.
announce = ["dep:axum"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tokio-tungstenite = { version = "0.29.0", default-features = false, features = ["connect", "handshake"] }
futures-util = "0.3"
rand = "0.9"
## The announce end-to-end test drives the real AnnounceDiscovery client
## against the server endpoint, so the client feature is needed in tests.
cascade-p2p = { path = "../p2p", features = ["announce"] }
serde_json.workspace = true

[lints]
workspace = true
